WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
217298
[curl] WebSocket tests are failing since
r267931
https://bugs.webkit.org/show_bug.cgi?id=217298
Summary
[curl] WebSocket tests are failing since r267931
Fujii Hironori
Reported
2020-10-04 14:31:09 PDT
[curl] WebSocket test are failing since
r267931
https://build.webkit.org/builders/WinCairo%2064-bit%20WKL%20Release%20%28Tests%29/builds/8810
Bug 217250
– "http:" should not be a valid URL
Attachments
WIP patch
(797 bytes, patch)
2020-10-04 14:58 PDT
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
Patch
(1.78 KB, patch)
2020-10-04 17:43 PDT
,
Fujii Hironori
darin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2020-10-04 14:31:59 PDT
I guess `CurlStream::CurlStream` shouldn't use `setProtocol`.
> urlForConnection.setProtocol(url.protocolIs("wss") ? "https" : "http");
Fujii Hironori
Comment 2
2020-10-04 14:58:44 PDT
Created
attachment 410483
[details]
WIP patch
Fujii Hironori
Comment 3
2020-10-04 17:43:45 PDT
Created
attachment 410491
[details]
Patch
Darin Adler
Comment 4
2020-10-04 20:45:42 PDT
Comment on
attachment 410491
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=410491&action=review
> Source/WebCore/platform/network/curl/CurlStream.cpp:47 > // Libcurl is not responsible for the protocol handling. It just handles connection. > // Only scheme, host and port is required. > - URL urlForConnection; > - urlForConnection.setProtocol(url.protocolIs("wss") ? "https" : "http"); > - urlForConnection.setHostAndPort(url.hostAndPort()); > - m_curlHandle->setUrl(urlForConnection); > + url.setProtocol(url.protocolIs("wss") ? "https" : "http"); > + m_curlHandle->setUrl(WTFMove(url));
The code no longer matches the comment.
Fujii Hironori
Comment 5
2020-10-04 21:19:45 PDT
Committed
r267954
: <
https://trac.webkit.org/changeset/267954
>
Radar WebKit Bug Importer
Comment 6
2020-10-04 21:20:19 PDT
<
rdar://problem/69940122
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug