[curl] WebSocket tests are failing since r267931 https://bugs.webkit.org/show_bug.cgi?id=217298

Reviewed by Darin Adler.

"http:" is a invalid URL since r267931. Change the way how to
construct a URL for libcurl.

* platform/network/curl/CurlStream.cpp:
(WebCore::CurlStream::CurlStream): Construct the URL just by
replacing the scheme part. Removed a local variable
urlForConnection.

Canonical link: https://commits.webkit.org/230063@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267954 268f45cc-cd09-0410-ab3c-d52691b4dbfc